tests/typecheck/bad/builtin-to_bystrx.scilexp
let zero = Uint32 1 in
builtin to_bystr32 zero
